<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onrobot_driver</name>
  <version>0.0.1</version>
  <description>ROS2 driver for OnRobot grippers</description>
  <maintainer email="tonyle98@outlook.com">Tony Le</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>libnet</exec_depend>
  <build_depend>libnet</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
